--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <section class=" jumbotron row" id="intro">
         <div class=" col-md-8 col-lg-8 col-xs-8 col-sm-8">
           <p class="lead">
-            Festivals and celebrations play an important role in the indian
-            culture and it's heritage. Most indian festivals have it's roots in
+            Festivals and celebrations play an important role in the Indian
+            culture and it's heritage. Most Indian festivals have it's roots in
             religious disciplines imprinting social and cultural heritage.
 
             Dasara ritual is a forte of the followers of Shakthi tradition, who
@@ -78,7 +78,7 @@
         India), Durga Pooja (in Eastern India), Durgotsava, navaratri, and so
         on..</p>
         <p>It seems that during its early inception Dasara was an all night
-        event with offerings to Goddessess and other poojas. Hence this festival
+        event with offerings to Goddesses and other poojas. Hence this festival
         was also called as nine("nava") nights("ratri"). As time passed, and
         people evolved into urban lifestyles, the late night offerings and
         rituals changed to all day event, which can still be seen followed
@@ -101,13 +101,13 @@
         Wisdom), and so on..</p></div>
 
         <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
-        <p>This tradition of female diety worship is followed since and before Vedic
-        times, Rig Veda suggest that the Hindu's belief in the feminine diety
-        was in favour of considering her as the all prevading energy of the
+        <p>This tradition of female deity worship is followed since and before Vedic
+        times, Rig Veda suggest that the Hindu's belief in the feminine deity
+        was in favor of considering her as the all pervading energy of the
         universe, and all life and gods as we perceive have come out of this
         Mother, The Mother of all known and knowing.</p>
 
-        <p>We can see the mentioning of Dasara and diety worshipping since the
+        <p>We can see the mentioning of Dasara and deity worshiping since the
         times of Ramayana and Mahabharata. Apart from that, historians have
         found that Devagiri's Yadavas, Hoysalas, Warangal's Kakateeyas
         celebrated Navaratri in accordance to the afore mentioned Vedic
@@ -118,8 +118,8 @@
         (lit. The killer of buffalo headed demon) was found from Shimoga
         District in Karnataka and is believed to be from 5th Century. Looking
         at all this historic evidence and other cultural texts, we can put
-        forth this argument that female diety worshipping has been a long lived
-        tradition as part of indian culture, and a rough estimate that these
+        forth this argument that female deity worshiping has been a long lived
+        tradition as part of Indian culture, and a rough estimate that these
         celebrations have survived time scales of about 2000 years.</p>
         </div>
         <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 tradition" >
@@ -138,7 +138,7 @@
 
         <p>The Mysore Kingdom was a small feudatory Kingdom under the
         Vijayanagara Empire. With the fall of Vijayanagara Empire, The Mysore
-        kings, Wodeyars inherited and perpetuated the traditions of
+        kings, Wodiyars inherited and perpetuated the traditions of
         Vijayanagara Empire thus showing their goodwill to the fallen Empire
         and it's great Men.
 
@@ -156,7 +156,7 @@
         Vijayadashami tradition in this region, and we can see that though
         empires have fallen, but the rituals and traditions haven't died. These
         ideas or ideologies are exquisite human expressions, which has spread across
-        the society, lived, propogated like a living organism, and still
+        the society, lived, propagated like a living organism, and still
         evolving in the modern day society.</p></div>
 
       <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12 ">
@@ -164,7 +164,7 @@
       </div>
 
  <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
-          <p>Dasara was celeberated with great religious importance, devout and
+          <p>Dasara was celebrated with great religious importance, devout and
             passion since the Vijayanagara times. Hampi's Mahanavami Dibba and
             Hazara Rama Temple is the living witness of a glorious past.</p>
 
@@ -172,7 +172,7 @@
 
           <p>All along the side walls of the Mahanavami Dibba, we can find
             sculptures of wrestlers (Garadi or kushti), hunters, horse traders,
-            Camel traders, Gymnasts, other Street acts, jugglers, conjurors and
+            Camel traders, Gymnasts, other Street acts, jugglers, conjurers and
             illusionists, dancers, instrumentalists, singers, kings, 
             attendants, army chieftains, are speaking of the time begone, and
             great majesty of the Dasara celebrations.</P>
@@ -180,7 +180,7 @@
 
         <div id="38"></div>
 
-          <p>Hazara Rama being the most important diety of the Royal family of
+          <p>Hazara Rama being the most important deity of the Royal family of
             Vijayanagara, we can see that the temple was built attached close to
             the palace complex. This temple also has beautifully designed
             sculptures of Bhagawata, Mahabharata and Ramayana stories.
@@ -189,9 +189,9 @@
 
             The outer walls of the temple, meaning the walls to east, north and
             west, have sculptures of elephant rows, horse rows, camel rows,
-            army knight team, army bishop team, army rooke team, swords and
+            army knight team, army bishop team, army rook team, swords and
             other short range weapons team, and long range weapons team like
-            the bows and arrows and other depictions of the then defence
+            the bows and arrows and other depictions of the then defense
             system.
 
             Apart from that folk artists like, kolata, dombaraata, wrestlers and
@@ -203,8 +203,8 @@
 
             This shows that, all the artists, the royal defence and other
             people involving all hierarchies of the then living society was
-            religiously involved with the celbrations and processions, this is
-            documented by Foreign travellers travelogues, whose details is discussed further.</p>
+            religiously involved with the celebrations and processions, this is
+            documented by Foreign travelers travelogues, whose details is discussed further.</p>
         <div id="37"></div>
 
           <p>Bharatesha Vaibhava, a great piece of literature from
@@ -222,7 +222,7 @@
             synonyms for Dasara in Hampi region where this tradition is found to
             be followed even before the Vijayanagra kings.
 
-            Foreign travellers who visited this region during the Vijayangara
+            Foreign travelers who visited this region during the Vijayangara
             period have published their travelogues add to this available
             evidences and most important of them will be Abdur Razzak, Domingo
             Paes and Nuniz ...
@@ -320,11 +320,11 @@
         <div id="31"></div>
         <h3></h3>
 
-       <p> After a mile - long walk, the procession would reach the Bannimantap site, 
+       <p> After a mile - long walk, the procession would reach the Banni mantapa site, 
 	where the king, after a bath, would worship the sami tree(or banni in Kannada).<p> 
 	<p>Worshiping this tree before embarking on any war adventure was customary for kings of this dynasty. 
 	The Wadiyar king would return to his palace after viewing the wonderful torchlight parade and the
-	 grand fireworks display at Bannimantap. </p>
+	 grand fireworks display at Banni mantapa. </p>
 
             <div id="30"></div>
 
@@ -347,7 +347,7 @@
             conferring titles on them. That would mark the close of the grand
             ten - days long celebrations during the days of the kings.</p>
 
-          <p> The beginning of the traditional Vijayadasami procession, which is
+          <p> The beginning of the traditional Vijayadashami procession, which is
             continued even today with the same - if not more - fervor and
             devotion, would be announced with a 21- round gun salute. The
             important streets of Mysore city would be decorated beautifully
@@ -374,13 +374,13 @@
         celebrating Dasara.</p>
 
           <p>The beginning is marked by the first day on which the entire
-            community visits the temples, the dieties from the temple are taken
+            community visits the temples, the deities from the temple are taken
             out on a procession along with the Bows and arrows and other tools of
-            war and utility.during this processions there is a lot of folk
+            war and utility. During this processions there is a lot of folk
             performances of Music, dance and other street shows. Another unique
             part of the celebrations is that the local muslim community also
             participates in the celebrations and rituals with same dedication and
-            fervor.These rituals will be held every day of Dasara.</p></div>
+            fervor. These rituals will be held every day of Dasara.</p></div>
           <section class="col-md-12 col-lg-12 col-sm-12 col-xs-12 ">
 
           	<img src="./img/Banni.png" style="width:100%;"/>
@@ -390,21 +390,21 @@
 	      </section>
 
  <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
-        <p>Common people’s Dassara used to start two days prior to Royal
-          Dassara. The king along with his family used to participate in the
-          common people’s dassara. <i>This Dassara was celebrated towards the
-          west from the kingdom at a distance of 5-6 forlong as recorded in
-          Nunij’s
+        <p>Common people’s Dasara used to start two days prior to Royal
+          Dasara. The king along with his family used to participate in the
+          common people’s dasara. <i>This Dasara was celebrated towards the
+          west from the kingdom at a distance of 5-6 furlong as recorded in
+          Nuniz’s
           travelogue</i><cite><a href="http://www.gutenberg.org/cache/epub/3310/pg3310.html">[0]</a></cite>. This
-          has been verified, common people’s dassara was celebrated in Gudi
+          has been verified, common people’s dasara was celebrated in Gudi
           hobbalapura which is located on the bank of Tungabhadra river which
-          is located to the west of Mahanavami Dibba, Hampi. This dassara is
+          is located to the west of Mahanavami Dibba, Hampi. This dasara is
           still alive in these regions.</p>
         <div id="35" ></div>
 
         <p>Present day Dharamaragudda or Kallaghata (Devaramala) still observes
-          common people’s dassara. This Dassara brings the villagers from surrounding
-          regions of Hampi. Pastoralists and farmers can be seen participating along with
+          common people’s dasara. This Dasara brings the villagers from surrounding
+          regions of Hampi. Pastorals and farmers can be seen participating along with
           their deities. </p>
 
         <p>The first day of Vijayadashami, people assemble by the bank of the
@@ -413,11 +413,11 @@
         clothes. The deities are then carried to Banni tree. This tree is
         called “Devara banni”. People take the leaves of this tree and they
         distribute it in their village. This ritual spreads the message of
-        equality. In accordance with this ritual a complete 9 days of programme
+        equality. In accordance with this ritual a complete 9 days  program
         has been documented.</p>
         <div id="34" ></div>
 
-        <p>The dieties from the temple are taken out on a procession along
+        <p>The deities from the temple are taken out on a procession along
          with the Bows and arrows and other tools of war and utility. During
          this processions there is a lot of folk performances of music, dance
          and other street shows. Another unique part of the celebrations is
@@ -429,7 +429,7 @@
 
         <p>Surrounding Hampi, in the left bank of Tungabhadra there is another
         major deity, called Durgamma temple which is located in Anne
-        Gundi. Here also dassara festival of common people is followed.</p>
+        Gundi. Here also dasara festival of common people is followed.</p>
 
 </div>
       </section>
@@ -482,18 +482,18 @@ a story conext.</p>
 
 <p>For our first version, we are using annotation information of images
 and text that are available in a store of messages that link the web
-data ( <a href="http://digitalhampi.swtr.in">digitalhampi.swtr.in</a> ). The images required for the narrative
+data ( <a target="_blank" href="http://digitalhampi.swtr.in">digitalhampi.swtr.in</a> ). The images required for the narrative
 is tagged appropriately.
 Example: the pictures displayed in Mysooru Dasara section of this Re-story is tagged as Chaha,
 Dasara, Mysore, Royal, name of ritual. The annotated source can be
 queried with different parameters like, ID, User, Tags and more
 configurable options.</p>
 
-<p>you can visit <a href="http://restory.swtr.us">restory.swtr.us</a> to see images related to this story,
+<p>you can visit <a target="_blank" href="http://restory.swtr.us">restory.swtr.us</a> to see images related to this story,
 tagged by users. Annotate and explore the inter-connections that
-surface from this story. You will also be able to restory and create
+surface from this story. You will also be able to re-story and create
 your own version of the story. </p>
-<p>If this has kindled your imagination, or you have questions on how to create your own restory? and for more...
+<p>If this has kindled your imagination, or you have questions on how to create your own re-story? and for more...
 contact vijayanagara at janastu dot org
  </p>
 	
