Edit About ++about Annotate and Explore, swt cmnt font size reduced, moved enlarge icon to right

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ Website:<a target="_blank" href="http://chaha.in/"> Chaluvaraju's Hampi Website<
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <button type="button" class="close pull-left" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title">About</h4>
       </div>
       <div class="modal-body">
@@ -489,8 +489,9 @@ Dasara, Mysore, Royal, name of ritual. The annotated source can be
 queried with different parameters like, ID, User, Tags and more
 configurable options.</p>
 
-<p>you can visit <a target="_blank" href="http://restory.swtr.us">restory.swtr.us</a> to see images related to this story,
-tagged by users. Annotate and explore the inter-connections that
+<p>You can click on the images in the narrative to enlarge, and you will find
+the lead EXPLORE <a target="_blank" href="http://restory.swtr.us">restory.swtr.us</a> to see images related to this story,
+tagged by users and ANNOTATE will lead to staging where you can annotate. Annotate and explore the inter-connections that
 surface from this story. You will also be able to re-story and create
 your own version of the story. </p>
 <p>If this has kindled your imagination, or you have questions on how to create your own re-story? and for more...
@@ -520,7 +521,7 @@ contact vijayanagara at janastu dot org
 <script type="text/template" id="story-image-template">
   <div class="row">
     <!-- <a href='#' data-toggle="modal" data-target="#lightbox"> -->
-    <div class="fullscreen-icon"><span class="glyphicon glyphicon-fullscreen pull-right"></span></div>
+    <div class="fullscreen-icon pull-right"><span class="glyphicon glyphicon-fullscreen "></span></div>
       <img src=<%= where %> class="story-image img-responsive "  data-toggle="modal" data-target="#lightbox" target-id=<%= id %>></img>
 
     <!-- </a> -->
