added link to restory video in About

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         evolving in the modern day society.</p></div>
 
       <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12 ">
-        <img src="./img/procession-hampi.png" style="width:100%;"/>
+        <img src="./img/procession-hampi.png" style="width:100%;height:100vh;"/>
       </div>
 
  <div class="wrap col-md-4 col-lg-4 col-xs-4 col-sm-4">
@@ -383,7 +383,7 @@
             fervor. These rituals will be held every day of Dasara.</p></div>
           <section class="col-md-12 col-lg-12 col-sm-12 col-xs-12 ">
 
-          	<img src="./img/Banni.png" style="width:100%;"/>
+          	<img src="./img/Banni.png" style="width:100%; height:100vh;"/>
 
 
 
@@ -494,6 +494,9 @@ the lead EXPLORE <a target="_blank" href="http://restory.swtr.us">restory.swtr.u
 tagged by users and ANNOTATE will lead to staging where you can annotate. Annotate and explore the inter-connections that
 surface from this story. You will also be able to re-story and create
 your own version of the story. </p>
+<p>To see a short demo video of restory, <a
+  href="https://www.dropbox.com/s/w81dlze5tjb9xge/restory%20final%20%20music.mp4?dl=0"
+  target="-blank">click here</a>
 <p>If this has kindled your imagination, or you have questions on how to create your own re-story? and for more...
 contact vijayanagara at janastu dot org
  </p>
